Refatoração e ajustes no botão de darkmode

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Sign in</title>
 </head>
 
-<body>
+<body class="body">
     <main>
         <h1>Sign in</h1>
         <p>Sign in and enjoy your website!</p>
@@ -44,7 +44,7 @@
         <img class="footer-bg" src="imgs/bg-1.svg" alt="imagem-rodape-light">
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
     <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 
