Alterado btn de darkmode para toggleDarkmode e alteração de icone do botão

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <button class="btn-form" type="submit">Login</button>
         </form>
         
-        <button id="darkmode-btn" onclick="changeMode()"><i class="fas fa-moon"></i></button>
+        <button id="darkmode-btn" onclick="toggleMode()"><i  id="icon-btn-mode" class="fas fa-moon"></i></button>
 
 
     </main>
