Ajuste na medida do form

--- a/src/index.html
+++ b/src/index.html
@@ -16,23 +16,20 @@
     <main>
         <h1 id="h1">Sign in</h1>
         <p id="p">Sign in and enjoy your website!</p>
-        <form>
-            <input class="" class="none" type="text" name="login" id="login" placeholder="Login" autocomplete="off"><br>
-
-            <input class="" type="password" name="password" id="password" placeholder="Password"><br>
-
-            <div>
-                <input type="checkbox" id="rbr">
-                <label id="remember" for="rbr">Remember me</label>
-                <a id="forgot-password" href="#">Forgot password?</a><br>
-            </div>
-
-            <button class="btn-form" type="submit">Login</button>
-        </form>
-        
-        <button id="darkmode-btn" onclick="toggleMode()"><i  id="icon-btn-mode" class="fas fa-moon"></i></button>
-
-
+        <div class="div-form">
+            <form>
+                <input class="" class="none" type="text" name="login" id="login" placeholder="Login"
+                    autocomplete="off"><br>
+                <input class="" type="password" name="password" id="password" placeholder="Password"><br>
+                <div>
+                    <input type="checkbox" id="rbr">
+                    <label id="remember" for="rbr">Remember me</label>
+                    <a id="forgot-password" href="#">Forgot password?</a><br>
+                </div>
+                <button class="btn-form" type="submit">Login</button>
+            </form>
+            <button id="darkmode-btn" onclick="toggleMode()"><i id="icon-btn-mode" class="fas fa-moon"></i></button>
+        </div>
     </main>
     <footer>
         <img id="footer-bg" class="footer-bg" src="imgs/bg-1.svg" alt="imagem-rodape">
